crates/eml_cli/tests/snapshots/integration__ui__run_fail@files__not_utf8.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- runtime error ---\\n{error}\\n\")"
input_file: tests/ui/run-fail/files/not_utf8.em
---
--- stdout ---
--- runtime error ---
`not_utf8.txt` is not valid UTF-8
  at run-fail/files/not_utf8.em:5:19
