crates/eml_cli/tests/snapshots/integration__ui__run_fail@files__read_directory.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- runtime error ---\\n{error}\\n\")"
input_file: tests/ui/run-fail/files/read_directory.em
---
--- stdout ---
--- runtime error ---
cannot read `.`: I/O error
  at run-fail/files/read_directory.em:5:19
